@@ -1,7 +1,15 @@
-# Advanced Planning and Scheduling (APS) Application
+#Advanced Planning and Scheduling(APS) Application
 
 ## Introduction
 
-Extend from the [APS-MES](https://github.com/RPIFisherman/APS-MES). This project add a graphical user interface (GUI) to the APS application. The GUI is implemented using the [javafx](https://openjfx.io/) library.
+Extend from the [APS-MES](https://github.com/RPIFisherman/APS-MES). This project
+add a graphical user interface (GUI) to the APS application. The GUI is
+implemented using the [javafx](https://openjfx.io/) library.
 
-[//]: # (This project is an implementation of an APS application that uses the [Gurobi]&#40;https://www.gurobi.com/&#41; optimization solver to solve the scheduling problem. The application is designed to be used by a manufacturing company to schedule the production of products in a way that maximizes the company's profit while meeting customer demand and respecting production constraints)
+[![Qodana](https://github.com/RPIFisherman/APS-app/actions/workflows/qodana_code_quality.yml/badge.svg)](https://github.com/RPIFisherman/APS-app/actions/workflows/qodana_code_quality.yml)
+
+Add VM Option for JavaFX:
+
+```Intellij IDEA
+--module-path <path-to-javafx-sdk> --add-modules javafx.controls,javafx.fxml
+```
